# vark-project

./: .gitignore  .vercelignore  README.md  docker-compose.yml  vercel.json
backend/: .env.example  Dockerfile  main.py  pyproject.toml  pytest.ini
backend/app/: config.py
backend/app/data/: vark_questions.json
backend/app/routers/: health.py  questions.py  reports.py  score.py
backend/app/schemas/: questions.py  result.py  score.py
backend/app/services/: learning_guide.py  pdf_report.py  scoring.py
backend/tests/: conftest.py  test_main.py  test_questions.py  test_reports.py  test_score.py  test_scoring.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  router.jsx
frontend/src/components/layout/: AppShell.jsx  Footer.jsx  Header.jsx
frontend/src/components/result/: ActionButtons.jsx  LearningGuide.jsx  ProfileCard.jsx  ScoresChart.jsx
frontend/src/components/ui/: Alert.jsx  Button.jsx  Card.jsx  Checkbox.jsx  Input.jsx  Progress.jsx  RadioGroup.jsx
frontend/src/components/wizard/: IntroStep.jsx  QuestionCard.jsx  QuestionsStep.jsx  WizardProgress.jsx
frontend/src/hooks/: useQuiz.js
frontend/src/lib/: api.js  quizShuffle.js  storage.js  utils.js
frontend/src/pages/: AboutPage.jsx  HomePage.jsx  NotFoundPage.jsx  QuizPage.jsx  ResultView.jsx  SobrePage.jsx
frontend/src/schemas/: quiz.js
frontend/src/store/: quiz.js
