[project]
name = "vark-backend"
version = "0.1.0"
description = "VARK learning styles questionnaire — FastAPI backend."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.2",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
